--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    /* .attribution {
+    .attribution {
       font-size: 11px;
       text-align: center;
     }
 
     .attribution a {
       color: hsl(228, 45%, 44%);
-    } */
+    }
 
     main{
       align-items: center;
@@ -31,31 +31,35 @@
 
     .cardBox{
       display: flex;
-      gap: 50px;
+      /* gap: 10px; */
       justify-content: center;
     }
     .cardOne{
-      width: 200px;
+      width: 220px;
       height: 200px;
       border: 2px solid blue;
+      transform: translate(100px, 100px);
     }
 
     .cardTwo{
-      width: 200px;
+      width: 220px;
       height: 200px;
       border: 2px solid blue;
+      transform: translate(113px, 0px);
     }
 
     .cardThree{
-      width: 200px;
+      width: 220px;
       height: 200px;
       border: 2px solid blue;
+      transform: translate(-112px, 220px);
     }
 
     .cardFour{
-      width: 200px;
+      width: 220px;
       height: 200px;
       border: 2px solid blue;
+      transform: translate(-100px, 100px);
     }
   </style>
 </head>
@@ -68,27 +72,42 @@
       to ensure that your project is successful</p>
 
     <div class="cardBox">
-      <div class="cardOne"></div>
-      <div class="cardTwo"></div>
-      <div class="cardThree"></div>
-      <div class="cardFour"></div>
+      <div class="cardOne">
+        <p>Supervisor</p>
+        <span>Monitors activity to identify project roadblocks</span>
+      </div>
+
+      <div class="cardTwo">
+        <p>Team Builder</p>
+        <span>Scans our talent network to create the optimal team for your project</span>
+      </div>
+
+      <div class="cardThree">
+        <p>Karma</p>
+        <span>Regularly evaluates our talent to ensure quality</span>
+      </div>
+
+      <div class="cardFour">
+        <p>Calculator</p>
+        <span>Uses data from past projects to provide better delivery estimates</span>
+      </div>
     </div>
   </main>
 
 
 
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+  
+  
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+  
+  
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+  
+  
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+  
+  
 
 
   <footer>
