--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
       padding: 10px;
       width: 220px;
       height: 200px;
-      border: 2px solid blue;
+      border-top: 3px solid hsl(0, 78%, 62%);
       transform: translate(100px, 100px);
+      box-shadow: 1px 1px 1px 1px gray;
     }
 
     .cardTwo{
@@ -94,7 +95,70 @@
     .cardOne span{
       display: block;
       font-size: 15px;
+      color: hsl(229, 6%, 66%);
       transform: translateY(-10px);
+    }
+
+    .cardOne img{
+      width: 50px;
+      transform: translate(150px, 20px);
+    }
+
+    .cardTwo p {
+      color: hsl(234, 12%, 34%);
+      text-align: start;
+      font-family: poppins;
+      font-weight: 600 ;
+    }
+
+    .cardTwo span{
+      display: block;
+      font-size: 15px;
+      color: hsl(229, 6%, 66%);
+      transform: translateY(-10px);
+    }
+
+    .cardTwo img{
+      width: 50px;
+      transform: translate(150px, 20px);
+    }
+
+    .cardThree p {
+      color: hsl(234, 12%, 34%);
+      text-align: start;
+      font-family: poppins;
+      font-weight: 600 ;
+    }
+
+    .cardThree span{
+      display: block;
+      font-size: 15px;
+      color: hsl(229, 6%, 66%);
+      transform: translateY(-10px);
+    }
+
+    .cardThree img{
+      width: 50px;
+      transform: translate(150px, 20px);
+    }
+
+    .cardFour p {
+      color: hsl(234, 12%, 34%);
+      text-align: start;
+      font-family: poppins;
+      font-weight: 600 ;
+    }
+
+    .cardFour span{
+      display: block;
+      font-size: 15px;
+      color: hsl(229, 6%, 66%);
+      transform: translateY(-10px);
+    }
+
+    .cardFour img{
+      width: 50px;
+      transform: translate(150px, 20px);
     }
   </style>
 </head>
@@ -110,21 +174,25 @@
       <div class="cardOne">
         <p>Supervisor</p>
         <span>Monitors activity to identify project roadblocks</span>
+        <img src="images/icon-supervisor.svg" alt="">
       </div>
 
       <div class="cardTwo">
         <p>Team Builder</p>
         <span>Scans our talent network to create the optimal team for your project</span>
+        <img src="images/icon-team-builder.svg" alt="">
       </div>
 
       <div class="cardThree">
         <p>Karma</p>
         <span>Regularly evaluates our talent to ensure quality</span>
+        <img src="images/icon-karma.svg" alt="">
       </div>
 
       <div class="cardFour">
         <p>Calculator</p>
         <span>Uses data from past projects to provide better delivery estimates</span>
+        <img src="images/icon-calculator.svg" alt="">
       </div>
     </div>
   </main>
