--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       padding: 10px;
       width: 220px;
       height: 200px;
-      border-top: 3px solid hsl(0, 78%, 62%);
+      border-top: 2px solid hsl(180, 62%, 55%);
       transform: translate(100px, 100px);
       box-shadow: 1px 1px 1px 1px gray;
     }
@@ -65,24 +65,27 @@
       padding: 10px;
       width: 220px;
       height: 200px;
-      border: 2px solid blue;
+      border-top: 2px solid hsl(0, 78%, 62%);
       transform: translate(113px, 0px);
+      box-shadow: 1px 1px 1px 1px gray;
     }
 
     .cardThree{
       padding: 10px;
       width: 220px;
       height: 200px;
-      border: 2px solid blue;
+      border-top: 2px solid hsl(34, 97%, 64%);
       transform: translate(-131px, 235px);
+      box-shadow: 1px 1px 1px 1px gray;
     }
 
     .cardFour{
       padding: 10px;
       width: 220px;
       height: 200px;
-      border: 2px solid blue;
+      border-top: 2px solid hsl(212, 86%, 64%);
       transform: translate(-120px, 100px);
+      box-shadow: 1px 1px 1px 1px gray;
     }
 
     .cardOne p {
