cards  almost look alike

--- a/index.html
+++ b/index.html
@@ -12,16 +12,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    @import url(https://fonts.google.com/specimen/Poppins);
-
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
     main{
       align-items: center;
@@ -31,17 +22,21 @@
       font-family: poppins;
       line-height: 25px;
       color: hsl(229, 6%, 66%);
+      font-weight: 200;
     }
     main p{
       margin-bottom: 30px;
       font-family: poppins;
       color: hsl(229, 6%, 66%);
+      font-weight: 400;
+      font-size: 15px;
     
     }
     .secondHeader{
       font-family: poppins;
       line-height: 18px;
       color: hsl(234, 12%, 34%);
+      font-weight: 600;
     }
     main h1, main p{
       text-align: center;
@@ -56,54 +51,60 @@
       padding: 10px;
       width: 220px;
       height: 200px;
+      border-radius: 5px;
       border-top: 2px solid hsl(180, 62%, 55%);
       transform: translate(100px, 100px);
-      box-shadow: 1px 1px 1px 1px gray;
+      box-shadow: 1px 1px 1px 1px whitesmoke;
     }
 
     .cardTwo{
       padding: 10px;
       width: 220px;
       height: 200px;
+      border-radius: 5px;
       border-top: 2px solid hsl(0, 78%, 62%);
       transform: translate(113px, 0px);
-      box-shadow: 1px 1px 1px 1px gray;
+      box-shadow: 1px 1px 1px 1px whitesmoke;
     }
 
     .cardThree{
       padding: 10px;
       width: 220px;
       height: 200px;
+      border-radius: 5px;
       border-top: 2px solid hsl(34, 97%, 64%);
       transform: translate(-131px, 235px);
-      box-shadow: 1px 1px 1px 1px gray;
+      box-shadow: 1px 1px 1px 1px whitesmoke;
     }
 
     .cardFour{
       padding: 10px;
       width: 220px;
       height: 200px;
+      border-radius: 5px;
       border-top: 2px solid hsl(212, 86%, 64%);
-      transform: translate(-120px, 100px);
-      box-shadow: 1px 1px 1px 1px gray;
+      transform: translate(-115px, 100px);
+      box-shadow: 1px 1px 1px 1px whitesmoke;
     }
 
     .cardOne p {
       color: hsl(234, 12%, 34%);
       text-align: start;
       font-family: poppins;
-      font-weight: 600 ;
+      font-weight: 600;
+      font-size: 15px;
     }
 
     .cardOne span{
       display: block;
-      font-size: 15px;
+      font-size: 12px;
+      font-family: poppins;
       color: hsl(229, 6%, 66%);
       transform: translateY(-10px);
     }
 
     .cardOne img{
-      width: 50px;
+      width: 40px;
       transform: translate(150px, 20px);
     }
 
@@ -112,17 +113,19 @@
       text-align: start;
       font-family: poppins;
       font-weight: 600 ;
+      font-size: 15px;
     }
 
     .cardTwo span{
       display: block;
-      font-size: 15px;
+      font-size: 12px;
+      font-family: poppins;
       color: hsl(229, 6%, 66%);
       transform: translateY(-10px);
     }
 
     .cardTwo img{
-      width: 50px;
+      width: 40px;
       transform: translate(150px, 20px);
     }
 
@@ -131,17 +134,19 @@
       text-align: start;
       font-family: poppins;
       font-weight: 600 ;
+      font-size: 15px;
     }
 
     .cardThree span{
       display: block;
-      font-size: 15px;
+      font-size: 12px;
+      font-family: poppins;
       color: hsl(229, 6%, 66%);
       transform: translateY(-10px);
     }
 
     .cardThree img{
-      width: 50px;
+      width: 40px;
       transform: translate(150px, 20px);
     }
 
@@ -150,17 +155,19 @@
       text-align: start;
       font-family: poppins;
       font-weight: 600 ;
+      font-size: 15px;
     }
 
     .cardFour span{
       display: block;
-      font-size: 15px;
+      font-size: 12px;
+      font-family: poppins;
       color: hsl(229, 6%, 66%);
       transform: translateY(-10px);
     }
 
     .cardFour img{
-      width: 50px;
+      width: 40px;
       transform: translate(150px, 20px);
     }
   </style>
@@ -200,28 +207,6 @@
     </div>
   </main>
 
-
-
-
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
 </body>
 
 </html>
